[package]
name = "rust_network_mapper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1.68"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = { version = "0.13", features = ["yaml"] }
rand = { version = "0.8", features = ["std_rng"] }
eframe = { version = "0.19.0", features = ["default_fonts", "glow"] }
